# faser

./: app.py  mse.py  nap.py  open.py  para.py  psf.tif  psf_config.json  psf_config_origin.json  pyproject.toml  test_na.py  test_nana.py  test_phase_net.zarr  test_stephane.zarr  x.py
Old/: app.py
batch-psf/: config.txt  psf.tif
faser/: io.py
faser/generators/: base.py
faser/generators/Matlab version/: Amplitude pup  Calculated parameters  Electric filed computation  FWHM  Fresnel coeffs  Intensity computation  Quantif PSF  Save graph  Set parameters  Visualization  initialized parameters  main  phase mask  pupil function
faser/generators/vectorial/stephane/: __init__.py  april_version.py  original.py  original_new.py  psf.py  tilted_coverslip.py
faser/napari/: gui.py  main.py
faser/napari/widgets/: fields.py  helper_widget.py  main_widget.py  mpl_canvas.py  tob_bar.py
psf/: config.txt  psf.tif
psf/Simulations/batch-psf/: psf.tif
psf/psf/: psf.tif
psf/sted/: psf.tif
src/tests/psf/: psf.tif
