[tool.poetry]
name = "faser"
version = "0.1.0"
description = ""
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
napari = {extras = ["pyqt5"], version = "^0.4.14"}
matplotlib = "^3.5.2"
xarray = "^2022.3.0"
zarr = "^2.11.3"
magicgui = "^0.4.0"

napari-plugin_engine = "^0.1.4"



[tool.poetry.scripts]
mikro-napari = "mikro_napari.run:main"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
