[tool.poetry]
name = "faser"
version = "0.2.9"
description = ""
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
classifiers = [
    "Framework :: napari",
]
include = ["faser", "faser/napari.yaml"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PyQt5 = "^5.15.7"
pydantic = "^2.9.2"
superqt = ">=0.6.7"
python-slugify = "^8.0.4"
annotated-types = "^0.7.0"
matplotlib = "^3.9.2"
numpy = "<2"
rich-click = "^1.8.3"


[tool.poetry.scripts]
faser= "faser.napari.main:main"


[tool.poetry.plugins."napari.plugin"]
faser = "faser.napari.plugin"

[tool.poetry.plugins."napari.manifest"]
faser = "faser:napari.yaml"

[tool.poetry.group.dev.dependencies]
napari = ">0.5"
pytest = "^7.1.2"
black = "^22.3.0"


[tool.pytest.ini_options]
qt_api="pyqt5"
markers = [
    "integration: marks tests that require a running server",
    "qt: marks tests that require a running qt application",
]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
